# ckanext-syndicate

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py  test.ini
changes/: _1.bugfix  _2.bugfix  _3.feature  _4.feature  _5.feature  _6.feature  _7.feature  _8.feature
ckanext/syndicate/: cli.py  interfaces.py  plugin.py  signals.py  tasks.py  types.py  utils.py
ckanext/syndicate/logic/: action.py  auth.py  schema.py
ckanext/syndicate/tests/: conftest.py  plugin.py  test_plugin.py  test_tasks.py
ckanext/syndicate/tests/logic/: test_action.py
