[metadata]
name = ckanext-syndicate
version = 2.0.0
description = Allows syndication (pushing) of datasets to another repository
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/aptivate/ckanext-syndicate
author = Aptivate
author_email = info@aptivate.org
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN syndication replication
[options]
packages = find:
install_requires =
                 ckanapi
                 blinker
include_package_data = True
[options.entry_points]
ckan.plugins =
             syndicate = ckanext.syndicate.plugin:SyndicatePlugin
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = i18n/ckanext-syndicate.pot
width = 80

[init_catalog]
domain = ckanext-syndicate
input_file = i18n/ckanext-syndicate.pot
output_dir = i18n

[update_catalog]
domain = ckanext-syndicate
input_file = i18n/ckanext-syndicate.pot
output_dir = i18n
previous = true

[compile_catalog]
domain = ckanext-syndicate
directory = i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
testpaths = ckanext/syndicate/tests
